# circuit_toy

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  app.rc  build.bat  circuit.json  guide.html  index.html  main.js  meson.build  package.json  preload.js  rebuild.bat  rebuildandrun.bat  run.bat  ui_layout.json
css/: styles.css
include/: analysis.h  app.h  circuit.h  circuits.h  component.h  file_io.h  input.h  logic.h  matrix.h  render.h  simulation.h  threadpool.h  types.h  ui.h
js/: app.js
js/components/: ground.js  opamp.js  passives.js  semiconductors.js  sources.js
js/core/: circuit.js  component.js  node.js  wire.js
js/math/: matrix.js  solver.js
js/simulation/: engine.js
js/ui/: canvas.js  measurements.js  oscilloscope.js  palette.js  properties.js
src/: analysis.c  app.c  circuit.c  circuits.c  component.c  file_io.c  input.c  logic.c  main.c  matrix.c  render.c  simulation.c  threadpool.c  ui.c
subprojects/SDL2-2.32.8/: .meson-subproject-wrap-hash.txt
tools/: meson.build  ui_editor.c
